--- a/conf/tsar.conf
+++ b/conf/tsar.conf
@@ -17,6 +17,7 @@ mod_lvs off
 mod_haproxy off
 mod_squid off
 mod_nginx off
+mod_nginx_live off
 mod_swift off
 mod_swift_code off
 mod_swift_domain off
