--- a/modules/Makefile
+++ b/modules/Makefile
@@ -33,7 +33,8 @@ else
             mod_swift_esi.so mod_swift_balancer.so mod_swift_blc_fwd.so mod_swift_conn.so\
             mod_tmd.so mod_percpu.so mod_rpi.so mod_tcprt.so mod_shell.so mod_nginx_domain.so \
 	    mod_tmd4.so mod_nginx_domain_traffic.so mod_nginx_ups.so mod_nginx_sys.so mod_network.so mod_lvsx.so mod_keyserver.so \
-	    mod_pharos.so mod_pharos_load.so mod_pharos_status.so mod_pharos_rcode.so mod_pharos_qtype.so
+	    mod_pharos.so mod_pharos_load.so mod_pharos_status.so mod_pharos_rcode.so mod_pharos_qtype.so \
+		mod_nginx_live.so
 endif
 
 all: $(OBJS)
