--- a/conf/tsar.conf
+++ b/conf/tsar.conf
@@ -61,7 +61,7 @@ output_stdio_mod mod_swap,mod_partition,mod_cpu,mod_mem,mod_lvs,mod_haproxy,mod_
 include /etc/tsar/conf.d/*.conf
 
 ####The IP address or the host running the NSCA daemon
-hostname "xiaoqiang.com"
+hostname xiaoqiang.com
 #server_addr nagios.server.com
 ####The port on which the daemon is running - default is 5667
 #server_port 8086
